# GOVNO-ENGINE

./: README.md  boot_editor.bat  build.rar  make.bat  make_editor.bat  make_imgui.bat  saving a node tree.txt
make/: make.bat  make_app.bat  make_editor.bat  make_imgui.bat
make/linux 64x/: make_app.sh  make_editor.bat  make_editor.sh  make_imgui.sh
make/windows 64x/: make_app.bat  make_editor.bat  make_imgui.bat
src/: CMakeLists.txt  aabb.cpp  assets.cpp  console.cpp  controls.cpp  fstream_opers.cpp  graphics.cpp  label.cpp  main.cpp  node.cpp  spatial.cpp  struct_loader.cpp  viewport.cpp
src/include/: config.h  console.h  controls.h  fstream_opers.h  graphics.h  node.h  spatial.h  struct_loader.h
src/include/core/: assets.h  controls.h  enums.h  viewport.h
src/include/structs/: aabb.h  font.h  label.h  node.h  spatial.h  sprite.h
src/tools/: editor.cpp
